syntax = "proto3";

package snapfaas.sched.messages;

import "syscalls.proto";

// Begin of request messages
message GetTask {
    uint64 threadId = 1;
}

message FinishTask {
    string taskId = 1;
    TaskReturn result = 2;
}

message LabeledInvoke {
    string             name             = 1;
    syscalls.Buckle    label            = 2;
    syscalls.Component gatePrivilege    = 3;
    string             payload          = 4;
    bool               sync             = 5;
}

message UpdateResource {
    bytes info = 1;
}

message DropResource {}
message TerminateAll {}
// End of request messages

// Begin of response messages
message ProcessTask {
    string        taskId        = 1;
    LabeledInvoke labeledInvoke = 2;
}

message Terminate {}
message Fail {}
message Ping {}
message Pong {}
// End of response messages

message Request {
    oneof kind {
        // Worker
        GetTask        getTask        = 1;
        FinishTask     finishTask     = 2;
        LabeledInvoke  labeledInvoke  = 3;
        // Local resource manager
        UpdateResource updateResource = 4;
        DropResource   dropResource   = 5;
        // Debug
        TerminateAll   terminateAll   = 6;
        Ping           ping           = 7;
    }
}

message Response {
    oneof kind {
        // Worker
        ProcessTask processTask = 1;
        Terminate   terminate   = 2;
        // Debug
        Fail        fail        = 3;
        TaskReturn  success     = 4;
        Pong        pong        = 5;
    }
}

enum ReturnCode {
    Dropped = 0;
    FunctionNotExist = 1;
    ResourceExhausted = 2;
    LaunchFailed = 3;
    ProcessRequestFailed = 4;
    GateNotExist = 5;
    Success = 6;
    QueueFull = 7;
}

message TaskReturn {
    ReturnCode code = 1;
    optional string payload = 2;
}
